[package]
name = "sentinel"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
serde = { version = "1.0.219", features = ["derive"] }
serde-xml-rs = "0.8.1"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
win-event-log = { git = "https://github.com/rustysec/win-event-log-rs", version = "0.1.2", features = ["xml", "subscriber"] }
